yaml/base/ollama/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ollama
  labels:
    app.kubernetes.io/name: ollama
    app.kubernetes.io/instance: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ollama
      app.kubernetes.io/instance: ollama
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ollama
        app.kubernetes.io/instance: ollama
    spec:
      serviceAccountName: ollama
      securityContext:
        {}
      containers:
      - name: ollama
        securityContext:
          {}
        image: "ollama/ollama:0.1.28"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 11434
          protocol: TCP
        args:
        resources:
          limits:
            cpu: 4000m
            memory: 8192Mi
            nvidia.com/gpu: 1
          requests:
            cpu: 2000m
            memory: 4096Mi
        volumeMounts:
        - name: ollama-data
          mountPath: /fakehome
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 30
          periodSeconds: 5
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 6
        lifecycle:
          postStart:
            exec:
              command:
              - "/bin/bash"
              - "-c"
              - |
                if [ `ollama list llava | wc -l` -lt 2 ]; then
                  echo "model does not exist and needs to be pulled"
                  ollama pull llava
                else
                  echo "model already exists"
                fi
      tolerations:
        - key: nvidia.com/gpu
          operator: Exists
          effect: NoSchedule
  volumeClaimTemplates:
  - metadata:
      name: ollama-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 16Gi
