yaml/base/ollama/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/name: ollama
  name: ollama
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  port:
    targetPort: http
  to:
    kind: Service
    name: ollama
    weight: 100
  wildcardPolicy: None
status: {}
